# Emu

./: .gitignore  README.md  __init__.py  pyproject.toml
api/: main.py
src/: __init__.py  config.py  generate_response.py  load_pdf.py  main.py  vectorDB.py
template/: index.html
